syntax = "proto3";

package common.types;

message Sport {
    enum Level {
        PROFESSIONAL = 0;
        COLLEGIATE = 1;
    }

    enum SportType {
        FOOTBALL = 0; 
        HOCKEY = 1;
        BASKETBALL = 2;
        BASEBALL = 3;
        GOLF = 4;
    }

    SportType sport_type = 1;
    Level level = 2;
}

message Color {
    uint32 r = 1;
    uint32 g = 2;
    uint32 b = 3;
}

message Team {
    uint64 id = 1;
    string location = 2;
    string name = 3;
    string display_name = 4;
    string abbreviation = 5;
    Color primary_color = 6;
    Color secondary_color = 7;
}

message Game {
    uint64 game_id = 1;
    Sport sport = 2;

    Team home_team = 3;
    Team away_team = 4;
    uint64 home_team_score = 5;
    uint64 away_team_score = 6;



    enum Status {
        PREGAME = 0;
        ACTIVE = 1;
        INTERMISSION = 2;
        END = 3;
        INVALID = 4;
    }
    Status status = 7;
    uint64 period = 8;
    string ordinal = 9;
    int64 start_time = 10;

    message BasketballData {}

    message BaseballData {
        uint64 balls = 1;
        uint64 outs = 2;
        uint64 strikes = 3;
        bool is_inning_top = 4;
        bool on_first = 5;
        bool on_second = 6;
        bool on_third = 7;
    }

    message FootballData {
        enum Possession {
            HOME = 0;
            AWAY = 1;
            NONE = 2;
        }
        string time_remaining = 1;
        string ball_position = 2;
        string down_string = 3;
        Possession possession = 4;
    }

    message HockeyData {
        message HockeyTeamData {
            bool powerplay = 1;
            uint64 num_skaters = 2;
        }
        HockeyTeamData home_team = 1;
        HockeyTeamData away_team = 2;
    }

    message GolfData {
        string event_name = 1;

        message GolfPlayer {
            string name = 1;
            string display_name = 2;
            string score = 3;
            uint64 position = 4;
        }

        repeated GolfPlayer players = 2;
    }

    oneof sport_data {
        BasketballData basketball_data = 11;
        BaseballData baseball_data = 12;
        FootballData football_data = 13;
        HockeyData hockey_data = 14;
        GolfData golf_data = 15;
    }
}

